[package]
name = "keytool"
version = "0.1.0"
edition = "2021"

[dependencies]
bip32 = "0.5.3"
bip39 = {version="2.1.0"}
bs58 = "0.5.1"
dirs = "6.0.0"
ed25519-dalek = "2.1.1"
serde_json = "1.0.139"
sha2 = "0.10.8"
solana-derivation-path = "2.2.1"
solana-keypair = {version="2.2.1",features = ["seed-derivable"] }
solana-sdk = "2.2.1"
# bip39 = "2.1.0"
# ed25519-dalek = "4.0.0"
# hex = "0.4.3"
