[package]
name = "solkey"
version = "0.1.0"
edition = "2021"

[lib]
name = "keytool"
path = "src/lib.rs"

[[bin]]
name = "suikey"
path = "src/sui-key.rs"

[[bin]]
name = "solkey"
path = "src/solana-key.rs"



[dependencies]
base64 = "0.22.1"
bip32 = "0.5.3"
bip39 = {version="2.1.0"}
blake2 = "0.10.6"
bs58 = "0.5.1"
dirs = "6.0.0"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
serde_json = "1.0.139"
sha2 = "0.10.8"
slip10 = "0.4.3"
solana-derivation-path = "2.2.1"
solana-keypair = {version="2.2.1",features = ["seed-derivable"] }
solana-sdk = "2.2.1"
typenum = "1.18.0"
# bip39 = "2.1.0"
# ed25519-dalek = "4.0.0"
# hex = "0.4.3"
